[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "attrs==20.3.0",
    "build==0.3.1.post1",
    "iniconfig==1.1.1",
    "packaging==20.9",
    "pep517==0.10.0",
    "pluggy==0.13.1",
    "py==1.10.0",
    "pyparsing==2.4.7",
    "pytest==6.2.2",
    "toml==0.10.2",
]
build-backend = "setuptools.build_meta"